# icn-core

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CCL_DEVELOPER_TOOLING.md  CCL_WASM_MEMORY_MILESTONE_COMPLETE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMIT_MESSAGE.md  CONTEXT.md  CONTRIBUTING.md  COPILOT_BRIEFING.md  COPILOT_MISSION.md  Cargo.toml  Cargo.toml.test  DEVNET_FIXES.md  DOCUMENTATION_INDEX.md  Economic_Incentive_Protocol.md  FEDERATION_CLI_EXAMPLES.md  I18N_IMPLEMENTATION_SUMMARY.md  ICN_API_REFERENCE.md  ICN_CORE_CURRENT_STATE_2025.md  ICN_CORE_TESTING_REPORT.md  ICN_IMPLEMENTATION_STATUS_MATRIX.md  ICN_MISSION_AND_STRATEGY.md  ICN_NEXT_STEPS_SUMMARY.md  ICN_ROADMAP_2025.md  IMPLEMENTATION_SUMMARY.md  MULTI_NODE_GUIDE.md  PHASE_2A_COMPLETION.md  PHASE_2A_DEMO.md  PHASE_2B_SUCCESS.md  PHASE_4_FEDERATION_DEVNET.md  PHASE_4_FEDERATION_DEVNET_PROGRESS.md  PHASE_5_COMPLETE_IMPLEMENTATION.md  PHASE_5_EXECUTION_PLAN.md  PHASE_5_MESH_NETWORK_UPGRADE.md  PRODUCTION_READINESS_REPORT.md  PROJECT_STATUS_AND_ROADMAP.md  README.md  README_CCL_LAUNCH.md  (+41 more)
crates/icn-action/: Cargo.toml
crates/icn-api/: Cargo.toml  README.md  generate-client-sdk  generate-client-sdk.rs
crates/icn-ccl-debug/: Cargo.toml
crates/icn-ccl-lsp/: Cargo.toml
crates/icn-ccl-packages/: Cargo.toml
crates/icn-ccl-runtime/: Cargo.toml
crates/icn-cli/: Cargo.toml  README.md
crates/icn-common/: Cargo.toml  README.md
crates/icn-core-traits/: Cargo.toml  README.md
crates/icn-crdt/: Cargo.toml  README.md
crates/icn-dag/: Cargo.toml  README.md
crates/icn-economics/: Cargo.toml  README.md  clippy.toml
crates/icn-eventstore/: Cargo.toml  README.md
crates/icn-federation-sync/: Cargo.toml
crates/icn-governance/: Cargo.toml  RANKED_CHOICE_VOTING.md  README.md  clippy.toml
crates/icn-identity/: Cargo.toml  README.md
crates/icn-mesh/: Cargo.toml  README.md
crates/icn-network/: Cargo.toml  README.md
crates/icn-node/: Cargo.toml  README.md  mana_ledger.sqlite
crates/icn-protocol/: Cargo.toml  README.md
crates/icn-reputation/: Cargo.toml  README.md
crates/icn-runtime/: Cargo.toml  DAG_STORAGE_GUIDE.md  MESH_LIFECYCLE.md  README.md  clippy.toml  temp_mana_ledger
crates/icn-sdk/: Cargo.toml  README.md
crates/icn-zk/: Cargo.toml  README.md
crates/job-audit/: Cargo.toml
icn-ccl/: ACCOMPLISHMENTS.md  CCL_FEATURE_ANALYSIS.md  Cargo.toml  README.md  advanced_democracy_test.ccl  arrays_strings_example.ccl  comprehensive_governance_demo.ccl  cooperative_banking_credit_union.ccl  cooperative_conflict_resolution.ccl  cooperative_dividend_distribution.ccl  cooperative_educational_governance.ccl  cooperative_membership_management.ccl  cooperative_reputation_access_control.ccl  cooperative_resource_allocation.ccl  cooperative_simple_governance.ccl  cooperative_supply_chain_coordination.ccl  cooperative_treasury_management.ccl  cooperative_work_assignment.ccl  debug_comparison.ccl  debug_equality.rs  debug_test.rs  demo_ccl.rs  demo_ccl_improvements_success.rs  demo_with_devnet.rs  feature_roadmap.md  final_demo_contract.rs  focused_democracy_test.ccl  governance_example.ccl  governance_example.rs  governance_example_simple.rs  governance_policy.ccl  quick_test.rs  simple.ccl  simple_comparison_test.ccl  simple_democracy_test.ccl  simple_policy.ccl  simple_policy.wasm  test_advanced_democracy.rs  test_array_operations.ccl  test_array_operations.rs  (+80 more)
icn-ccl/ccl-lib/: README.md  assembly_governance.ccl  budgeting.ccl  budgeting_minimal.ccl  budgeting_simple.ccl  reputation_voting.ccl
icn-ccl/examples/: age_proof.ccl  assembly_template.ccl  childcare_cooperative_schedule.ccl  community_energy_sharing.ccl  cooperative_council.ccl  cooperative_energy_distribution.ccl  cooperative_housing_maintenance.ccl  council_template.ccl  credential_issue_on_accept.ccl  dispute_resolution.ccl  general_assembly.ccl  pantry_credit.ccl  reputation_proof.ccl  rotating_stewards.ccl  rotating_stewards_template.ccl  solidarity_emergency_fund.ccl  worker_time_tracking.ccl
icn-ccl/src/: ast.rs  cli.rs  cli_commands.rs  debugger.rs  error.rs  governance_std.rs  lib.rs  lsp_server.rs  metadata.rs  migration.rs  optimizer.rs  package_manager.rs  parser.rs  semantic_analyzer.rs  stdlib.rs  test_features.rs  wasm_backend.rs
icn-ccl/tests/: advanced_match.rs  array_push_pop.rs  arrays.rs  assembly_delegation.rs  ast_pair.rs  compilation_tests.rs  control_flow.rs  enhanced_array_memory.rs  enhanced_data_structures.rs  enhanced_features.rs  feature_contracts.rs  for_loops.rs  generic_tests.rs  integration_tests.rs  match_option.rs  module_import.rs  nested_control_flow.rs  operator_precedence.rs  property_tests.rs  semantic_tests.rs  string_concat.rs  string_literals.rs  string_operations.rs  template_examples.rs  templates.rs  test_developer_tooling.rs  try_catch.rs  wasm_executor_integration.rs  while_loops.rs
tests/: Cargo.toml  README.md  federation_trust_integration.rs  grammar_test.ccl  stdlib_functions_test.md  test_action_encoding.rs  test_advanced_features.rs  validation_production_defaults.rs
tests/ccl/: test_budgeting_functions.rs  test_else_if_fix.ccl  test_generic_semantics.rs  test_generics_simple.rs  test_grammar_check.rs  test_pattern_matching.rs  test_policy.ccl  test_ultimate_basic.rs  test_while_loops.ccl
tests/integration/: README.md  README_p2p_dag.md  auth_tls.rs  capacity_aware_mana.rs  chaos_recovery.rs  cli_integration.rs  cli_node.rs  comprehensive_e2e.rs  credential_disclosure.rs  credential_issuance.rs  credential_trusted_issuers.rs  dag_sync.rs  federation.rs  federation_sync_restart.rs  full_workflow.rs  governance_proofs.rs  governance_sled_lifecycle.rs  host_zk_roundtrip.rs  icn_node_end_to_end.rs  job_pipeline.rs  job_submission_cli.rs  libp2p_job_pipeline.rs  mod.rs  multi_node_libp2p.rs  network_partition_recovery.rs  network_resilience.rs  p2p_dag_e2e.rs  p2p_dag_e2e_fixed.rs  p2p_dag_enhanced.rs  parameter_change.rs  peer_discovery.rs  persistence.rs  policy_enforcer.rs  production_services.rs  reputation_persistence.rs  simple_verification.rs  ten_node_scale.rs  test_config.toml  (+3 more)
(+3892 files in other folders)
