[workspace]
members = [
    "crates/icn-common",
    "crates/icn-identity",
    "crates/icn-dag",
    "crates/icn-mesh",
    "crates/icn-runtime",
    "crates/icn-protocol",
    "crates/icn-governance",
    "crates/icn-economics",
    "crates/icn-reputation",
    "crates/icn-network",
    "crates/icn-api",
    "crates/icn-cli",
    "crates/icn-node",
    "icn-ccl",
    "tests",
    "crates/icn-sdk",
]
resolver = "2"

# Optional: centralize workspace-wide settings
[workspace.package]
edition = "2021"
version = "0.2.0"
authors = ["InterCooperative Network <dev@intercooperative.network>"]
license = "Apache-2.0"

# Dependencies for integration tests
[workspace.dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
proptest = "1.4"


