[workspace]
members = [
    "crates/icn-common",
    "crates/icn-identity",
    "crates/icn-dag",
    "crates/icn-mesh",
    "crates/icn-runtime",
    "crates/icn-protocol",
    "crates/icn-governance",
    "crates/icn-economics",
    "crates/icn-eventstore",
    "crates/icn-reputation",
    "crates/icn-network",
    "crates/icn-api",
    "crates/icn-cli",
    "crates/icn-node",
    "icn-ccl",
    "crates/icn-templates",
    "tests",
    "crates/icn-sdk",
    "crates/icn-zk",
]
resolver = "2"

# Optional: centralize workspace-wide settings
[workspace.package]
edition = "2021"
version = "0.2.0"
authors = ["InterCooperative Network <dev@intercooperative.network>"]
license = "Apache-2.0"

# Profile configurations to fix linking issues
[profile.dev]
debug = 1  # Reduced debug info to fix wasmtime-cranelift linking issues
split-debuginfo = "unpacked"

[profile.release]
debug = 1  # Some debug info for better error reporting
lto = "thin"  # Use thin LTO instead of full LTO to avoid compiler crashes
codegen-units = 4  # Increase codegen units to reduce memory pressure

# Dependencies for integration tests
[workspace.dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }


