[package]
name = "icn-ccl"
version.workspace = true
edition = "2021" # Assuming 2021 edition, adjust if needed
authors = ["InterCooperative Network <dev@intercooperative.network>"]
license = "Apache-2.0"
# description = "Compiler for the Cooperative Contract Language (CCL) to WASM"

[[bin]]
name = "demo_ccl"
path = "demo_ccl.rs"

[[bin]]
name = "demo_with_devnet"
path = "demo_with_devnet.rs"

[[bin]]
name = "test_parameter_fix"
path = "test_parameter_fix.rs"

[[bin]]
name = "test_working_features"
path = "test_working_features.rs"

[[bin]]
name = "test_governance_policy"
path = "test_governance_policy.rs"

# [[bin]]
# name = "test_ccl_devnet_integration" 
# path = "test_ccl_devnet_integration.rs"

[[bin]]
name = "test_cooperative_contracts"
path = "test_cooperative_contracts.rs"

[[bin]]
name = "test_individual_contracts"
path = "test_individual_contracts.rs"

[[bin]]
name = "test_else_if"
path = "test_else_if.rs"

[[bin]]
name = "test_operators"
path = "test_operators.rs"

[[bin]]
name = "test_simple_operators"
path = "test_simple_operators.rs"

[[bin]]
name = "test_simple_for"
path = "test_simple_for.rs"

[[bin]]
name = "test_for_arithmetic"
path = "test_for_arithmetic.rs"

[[bin]]
name = "debug_equality"
path = "debug_equality.rs"

[[bin]]
name = "test_original_problems"
path = "test_original_problems.rs"

[[bin]]
name = "test_loops"
path = "test_loops.rs"

[[bin]]
name = "test_arrays"
path = "test_arrays.rs"

[[bin]]
name = "test_assignment"
path = "test_assignment.rs"

[[bin]]
name = "test_strings"
path = "test_strings.rs"

[[bin]]
name = "test_string_bool"
path = "test_string_bool.rs"

[[bin]]
name = "test_strings_fixed"
path = "test_strings_fixed.rs"

[[bin]]
name = "test_stdlib"
path = "test_stdlib.rs"

[[bin]]
name = "test_stdlib_fixed"
path = "test_stdlib_fixed.rs"

[[bin]]
name = "governance_example"
path = "governance_example.rs"

[[bin]]
name = "governance_example_simple"
path = "governance_example_simple.rs"

[[bin]]
name = "test_structs"
path = "test_structs.rs"

[[bin]]
name = "test_simple_struct"
path = "test_simple_struct.rs"

[[bin]]
name = "test_struct_instantiation"
path = "test_struct_instantiation.rs"

[[bin]]
name = "ultimate_governance_contract"
path = "ultimate_governance_contract.rs"

[[bin]]
name = "final_demo_contract"
path = "final_demo_contract.rs"

[[bin]]
name = "working_features_demo"
path = "working_features_demo.rs"

[[bin]]
name = "test_else_if_fix"
path = "test_else_if_fix.rs"

[[bin]]
name = "test_while_loops"
path = "test_while_loops.rs"

[[bin]]
name = "test_for_loops"
path = "test_for_loops.rs"

[[bin]]
name = "test_struct_access"
path = "test_struct_access.rs"

[[bin]]
name = "test_const_declarations"
path = "test_const_declarations.rs"

[[bin]]
name = "test_array_operations"
path = "test_array_operations.rs"

[[bin]]
name = "test_array_operations_simple"
path = "test_array_operations_simple.rs"

[[bin]]
name = "test_else_if_comprehensive"
path = "test_else_if_comprehensive.rs"

[[bin]]
name = "test_all_cooperative_contracts"
path = "test_all_cooperative_contracts.rs"

# [[bin]]
# name = "test_simple_standalone"
# path = "test_simple_standalone.rs"

[[bin]]
name = "test_string_array_improvements"
path = "test_string_array_improvements.rs"

[[bin]]
name = "test_simple_compilation"
path = "test_simple_compilation.rs"

[[bin]]
name = "test_option_result"
path = "test_option_result.rs"

[[bin]]
name = "test_comprehensive_improvements"
path = "test_comprehensive_improvements.rs"

[[bin]]
name = "test_gte_operator"
path = "test_gte_operator.rs"

[[bin]]
name = "test_simple_gte"
path = "test_simple_gte.rs"

[[bin]]
name = "demo_ccl_improvements_success"
path = "demo_ccl_improvements_success.rs"

[[bin]]
name = "test_mutable_fix"
path = "test_mutable_fix.rs"

[[bin]]
name = "test_budgeting_contract"
path = "test_budgeting_contract.rs"

[[bin]]
name = "test_budgeting_functions"
path = "test_budgeting_functions.rs"

[[bin]]
name = "test_scoped_tokens"
path = "test_scoped_tokens.rs"

[[bin]]
name = "test_identity_federation"
path = "test_identity_federation.rs"

[[bin]]
name = "test_dag_storage"
path = "test_dag_storage.rs"

[[bin]]
name = "test_final_infinite_loop_fix"
path = "test_final_infinite_loop_fix.rs"

[[bin]]
name = "test_ultimate_basic"
path = "test_ultimate_basic.rs"

[[bin]]
name = "verify_infinite_loop_fix"
path = "verify_infinite_loop_fix.rs"



# [[bin]]
# name = "generate_ccl_job_spec"
# path = "src/bin/generate_ccl_job_spec.rs"


[dependencies]
pest = "2.7" # Or the version you intend to use
pest_derive = "2.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
hex = "0.4" # Added for placeholder CID/hash generation in cli.rs
# Logging
log = "0.4"
# Hashing
sha2 = "0.10"
# WASM generation
wasm-encoder = "0.233"
wasmparser = "0.121"
# HTTP client for job spec generator
reqwest = { workspace = true, features = ["blocking"] }
# wasm-tools = "1.208"  # Example, for WASM manipulation/validation

# Dependency for icn-common if metadata uses Did, Cid etc.
icn-common = { path = "../crates/icn-common" } # Adjust path as necessary

[dev-dependencies]
tempfile = "3.10"
# Needed to execute compiled WASM in tests
icn-runtime = { path = "../crates/icn-runtime", features = ["async"] }
# Additional crates used in tests
icn-identity = { path = "../crates/icn-identity" }
icn-mesh = { path = "../crates/icn-mesh" }
tokio = { version = "1.0", features = ["full"] }
# For temporary DAG stores in integration tests
icn-dag = { path = "../crates/icn-dag" }
# Add test dependencies
wasmtime = { version = "15", features = ["async"] }
# Templates for testing
icn-templates = { path = "../crates/icn-templates" }


