[package]
name = "icn-integration-tests"
version.workspace = true
edition.workspace = true

[[test]]
name = "federation"
path = "integration/federation.rs"

[[test]]
name = "libp2p_job_pipeline"
path = "integration/libp2p_job_pipeline.rs"

[[test]]
name = "network_resilience"
path = "integration/network_resilience.rs"

[[test]]
name = "persistence"
path = "integration/persistence.rs"

[[test]]
name = "icn_node_end_to_end"
path = "integration/icn_node_end_to_end.rs"

[[test]]
name = "peer_discovery"
path = "integration/peer_discovery.rs"

[[test]]
name = "cli_node"
path = "integration/cli_node.rs"

[[test]]
name = "policy_enforcer"
path = "integration/policy_enforcer.rs"

[[test]]
name = "parameter_change"
path = "integration/parameter_change.rs"

[[test]]
name = "ccl_operator_precedence"
path = "../icn-ccl/tests/operator_precedence.rs"

[[test]]
name = "ten_node_scale"
path = "integration/ten_node_scale.rs"

[[test]]
name = "comprehensive_e2e"
path = "integration/comprehensive_e2e.rs"

[[test]]
name = "simple_verification"
path = "integration/simple_verification.rs"

[features]
default = []
enable-libp2p = ["icn-node/with-libp2p", "icn-runtime/enable-libp2p"]

[dependencies]
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
once_cell = "1"
assert_cmd = "2.0"
predicates = "3.1"
axum = { version = "0.7", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
icn-node = { path = "../crates/icn-node", features = ["with-libp2p"] }
icn-runtime = { path = "../crates/icn-runtime", features = ["async"] }
icn-governance = { path = "../crates/icn-governance" }
icn-mesh = { path = "../crates/icn-mesh" }
icn-common = { path = "../crates/icn-common" }
icn-protocol = { path = "../crates/icn-protocol" }
icn-identity = { path = "../crates/icn-identity" }
icn-network = { path = "../crates/icn-network" }
