[package]
name = "icn-integration-tests"
version.workspace = true
edition.workspace = true

[[test]]
name = "federation"
path = "integration/federation.rs"

[[test]]
name = "libp2p_job_pipeline"
path = "integration/libp2p_job_pipeline.rs"

[[test]]
name = "network_resilience"
path = "integration/network_resilience.rs"

[[test]]
name = "persistence"
path = "integration/persistence.rs"

[[test]]
name = "icn_node_end_to_end"
path = "integration/icn_node_end_to_end.rs"

[[test]]
name = "peer_discovery"
path = "integration/peer_discovery.rs"

[[test]]
name = "cli_node"
path = "integration/cli_node.rs"

[[test]]
name = "policy_enforcer"
path = "integration/policy_enforcer.rs"

[[test]]
name = "parameter_change"
path = "integration/parameter_change.rs"

[[test]]
name = "ccl_operator_precedence"
path = "../icn-ccl/tests/operator_precedence.rs"

[[test]]
name = "ten_node_scale"
path = "integration/ten_node_scale.rs"

[[test]]
name = "full_workflow"
path = "integration/full_workflow.rs"

[dependencies]
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true
once_cell = "1"
assert_cmd = "2.0"
predicates = "3.1"
axum = { version = "0.8", features = ["json"] }
icn-node = { path = "../crates/icn-node", features = ["with-libp2p"] }
icn-runtime = { path = "../crates/icn-runtime", features = ["async"] }
icn-governance = { path = "../crates/icn-governance" }
