[package]
name = "icn-action"
version = "0.2.0"
edition = "2021"
authors = ["InterCooperative Network <dev@intercooperative.network>"]
license = "Apache-2.0"
description = "QR/NFC action encoding and decoding for ICN"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
url = "2.5"
base64 = "0.22"

# ICN dependencies
icn-common = { path = "../icn-common" }

# Optional QR code generation (enabled by feature)
[features]
default = []
qr = ["qrcode", "image"]
nfc = []

[dependencies.qrcode]
version = "0.14"
optional = true

[dependencies.image]
version = "0.25"
optional = true