[package]
name = "icn-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
icn-common = { path = "../icn-common", version = "0.1.0" }
icn-dag = { path = "../icn-dag", version = "0.1.0" }
icn-network = { path = "../icn-network", version = "0.1.0" }
icn-governance = { path = "../icn-governance", version = "0.1.0", features = ["serde"] }
serde_json = "1.0"
