[package]
name = "icn-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
icn-common = { path = "../icn-common" }
icn-dag = { path = "../icn-dag" }
icn-network = { path = "../icn-network" }
icn-governance = { path = "../icn-governance", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
types-only = [] # Allows depending only on types, no extra code, if types are pub
