[package]
name = "icn-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
icn-common = { path = "../icn-common" }
icn-dag = { path = "../icn-dag", features = ["async"] }
icn-network = { path = "../icn-network" }
icn-protocol = { path = "../icn-protocol" }
icn-governance = { path = "../icn-governance", features = ["serde"] }
icn-economics = { path = "../icn-economics", optional = true }
icn-mesh = { path = "../icn-mesh", optional = true }
icn-identity = { path = "../icn-identity" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
tokio = { workspace = true }
async-trait = "0.1"
reqwest.workspace = true
once_cell = "1.21"
prometheus-client = "0.22"
axum = { version = "0.6", optional = true }

[features]
default = []
types-only = [] # Allows depending only on types, no extra code, if types are pub
axum-endpoint = ["axum"]
runtime-metrics = ["icn-economics", "icn-mesh"]

[dev-dependencies]
tempfile = "3.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
