[package]
name = "icn-ccl-debug"
version = "0.2.0"
edition = "2021"
description = "Debugger for CCL contracts and WASM execution"
authors = ["ICN Team"]
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
wasmtime = "15.0"
icn-ccl = { path = "../../icn-ccl" }
icn-common = { path = "../icn-common" }
icn-runtime = { path = "../icn-runtime" }

[[bin]]
name = "icn-ccl-debug"
path = "src/main.rs"