[package]
name = "icn-ccl-packages"
version = "0.2.0"
edition = "2021"
description = "Package manager for CCL modules and governance patterns"
authors = ["ICN Team"]
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
toml = "0.8"
reqwest = { version = "0.12", features = ["json"] }
tar = "0.4"
flate2 = "1.0"
sha2 = "0.10"
icn-ccl = { path = "../../icn-ccl" }
icn-common = { path = "../icn-common" }

[[bin]]
name = "icn-ccl-pkg"
path = "src/main.rs"