[package]
name = "icn-ccl-runtime"
version = "0.2.0"
edition = "2021"
description = "Enhanced CCL runtime with security, federation support, and economic metering"
license = "MIT OR Apache-2.0"

[dependencies]
icn-common = { path = "../icn-common" }
icn-economics = { path = "../icn-economics" }
icn-governance = { path = "../icn-governance" }
icn-identity = { path = "../icn-identity" }
icn-dag = { path = "../icn-dag" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"
log = "0.4"
prometheus = "0.13"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
parking_lot = "0.12"
dashmap = "5.5"

[dev-dependencies]
tempfile = "3.20"
tokio-test = "0.4"

[features]
default = []