[package]
name = "icn-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
icn-common = { path = "../icn-common" }
icn-api = { path = "../icn-api" }
icn-governance = { path = "../icn-governance" }
anyhow = "1.0"

clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
icn-ccl = { path = "../../icn-ccl" }

[dev-dependencies]
assert_cmd = "2.0"
tokio = { version = "1", features = ["full"] }
predicates = "3.1"
axum = { version = "0.7", features = ["json"] }
icn-node = { path = "../icn-node" }
icn-dag = { path = "../icn-dag", features = ["persist-sqlite"] }
tempfile = "3"
serial_test = { version = "3", features = ["async"] }
