[package]
name = "icn-common"
version = "0.1.0"
edition = "2021"
authors = ["ICN Contributors"]
description = "Common data structures, types, utilities, and error definitions for ICN."
license = "Apache-2.0"
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" # For examples and potentially some utils
bs58 = "0.5.0" # For CID string representation example
thiserror = "1.0" # For idiomatic error definitions
sha2 = "0.10"
ed25519-dalek = { version = "2.0.0-pre.3", features = ["rand_core"] }
serde_bytes = "0.11"

[dev-dependencies]
rand_core = { version = "0.6", features = ["getrandom"] }
