[package]
name = "icn-crdt"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CRDT (Conflict-free Replicated Data Type) implementations for ICN real-time synchronization"
readme = "README.md"

[dependencies]
icn-common = { path = "../icn-common" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
thiserror = "2.0"
log = "0.4"
tokio = { version = "1.0", features = ["sync", "time"] }
futures = "0.3"
dashmap = "6.1"
sha2 = "0.10"
hex = "0.4"
async-trait = "0.1"
fastrand = "2.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time"] }
tempfile = "3.0"

[features]
default = []
test-utils = []

[package.metadata.clippy]
disallowed-methods = [
    { path = "std::time::SystemTime::now", reason = "use deterministic time provider" },
    { path = "fastrand::f64", reason = "use deterministic RNG" },
    { path = "fastrand::u64", reason = "use deterministic RNG" },
    { path = "fastrand::u32", reason = "use deterministic RNG" },
    { path = "fastrand::usize", reason = "use deterministic RNG" },
    { path = "fastrand::fill", reason = "use deterministic RNG" }
]