[package]
name = "icn-dag"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
icn-common = { path = "../icn-common" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
sled = { version = "0.34", optional = true }
bincode = { version = "1.3", optional = true }
rusqlite = { version = "0.29", optional = true, features = ["bundled"] }
rocksdb = { version = "0.21", optional = true }
tokio = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3.0"
sled = { version = "0.34", optional = false }
bincode = { version = "1.3", optional = false }
rusqlite = { version = "0.29", optional = false, features = ["bundled"] }
rocksdb = { version = "0.21", optional = false }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util"] }

[features]
default = ["persist-sled"]
persist-sled = ["dep:sled", "dep:bincode"]
persist-sqlite = ["dep:rusqlite"]
persist-rocksdb = ["dep:rocksdb", "dep:bincode"]
async = ["dep:tokio"]
