[package]
name = "icn-dag"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
icn-common = { path = "../icn-common" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
sled = { version = "0.34", optional = true }
bincode = { version = "1.3", optional = true }
rusqlite = { version = "0.32", optional = true, features = ["bundled"] }
rocksdb = { version = "0.21", optional = true }
tokio-postgres = { version = "0.7", optional = true }
deadpool-postgres = { version = "0.14", optional = true }
tokio = { workspace = true, optional = true }
once_cell = "1.21"
prometheus-client = "0.22"
sha2 = "0.10"
hex = "0.4"
flate2 = "1.0"

[dev-dependencies]
tempfile = "3.0"
sled = { version = "0.34" }
bincode = { version = "1.3" }
rusqlite = { version = "0.32", features = ["bundled"] }
rocksdb = { version = "0.21" }
tokio-postgres = { version = "0.7" }
deadpool-postgres = { version = "0.14" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util"] }
criterion = { version = "0.5", features = ["async"] }

[features]
default = ["persist-sled"]
persist-sled = ["dep:sled", "dep:bincode"]
persist-sqlite = ["dep:rusqlite"]
persist-rocksdb = ["dep:rocksdb", "dep:bincode"]
persist-postgres = ["dep:tokio-postgres", "dep:deadpool-postgres"]
async = ["dep:tokio"]
